2024-01-10 김진건 내용 : framedata 의 uuid 에 맞춰서 메세지 생성 정렬